collected numeric training features from Bag of Words

--- a/clean_articles.ipynb
+++ b/clean_articles.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -22,6 +22,7 @@
     "import json\n",
     "import gensim\n",
     "import re\n",
+    "import numpy as np\n",
     "\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import RegexpTokenizer\n",
@@ -350,12 +351,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the bag of words model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 88,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 109)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# can do feature(token) reduction later for too rare and too common words\n",
     "\n",
@@ -364,7 +383,151 @@
     "# stem article\n",
     "stemmed_article = ' '.join(wd for wd in stemmed_tokens)\n",
     "# perform count-based vectorization\n",
-    "article_vect = vectorizer.fit_transform([stemmed_article])"
+    "article_vect = vectorizer.fit_transform([stemmed_article])\n",
+    "\n",
+    "# Kaggle method \n",
+    "train_data_features = article_vect.toarray()\n",
+    "train_data_features.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at the vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ad\n",
+      "5 analyst\n",
+      "5 announc\n",
+      "1 approach\n",
+      "1 april\n",
+      "2 averag\n",
+      "1 back\n",
+      "1 base\n",
+      "1 beat\n",
+      "1 beaten\n",
+      "1 call\n",
+      "2 came\n",
+      "1 cap\n",
+      "3 chang\n",
+      "1 climb\n",
+      "1 close\n",
+      "1 compani\n",
+      "1 compar\n",
+      "8 consensus\n",
+      "1 cover\n",
+      "2 data\n",
+      "1 date\n",
+      "6 day\n",
+      "1 declar\n",
+      "1 declin\n",
+      "2 drop\n",
+      "16 earn\n",
+      "2 end\n",
+      "1 ep\n",
+      "1 equiti\n",
+      "6 estim\n",
+      "4 expect\n",
+      "2 facebook\n",
+      "3 fb\n",
+      "1 februari\n",
+      "1 fell\n",
+      "1 financi\n",
+      "1 firm\n",
+      "1 fiscal\n",
+      "4 follow\n",
+      "1 four\n",
+      "1 fourth\n",
+      "1 gain\n",
+      "1 given\n",
+      "1 go\n",
+      "1 higher\n",
+      "2 histori\n",
+      "2 inc\n",
+      "1 januari\n",
+      "1 juli\n",
+      "5 last\n",
+      "1 level\n",
+      "1 low\n",
+      "1 made\n",
+      "3 market\n",
+      "1 met\n",
+      "1 month\n",
+      "1 move\n",
+      "2 nasdaq\n",
+      "2 near\n",
+      "1 next\n",
+      "1 novemb\n",
+      "1 occas\n",
+      "1 offici\n",
+      "3 past\n",
+      "6 per\n",
+      "5 percent\n",
+      "2 period\n",
+      "4 posit\n",
+      "1 post\n",
+      "1 present\n",
+      "9 price\n",
+      "1 probabl\n",
+      "2 project\n",
+      "1 public\n",
+      "8 quarter\n",
+      "3 rang\n",
+      "1 reaction\n",
+      "1 rebound\n",
+      "2 recent\n",
+      "1 record\n",
+      "1 releas\n",
+      "1 relev\n",
+      "4 report\n",
+      "1 respond\n",
+      "3 result\n",
+      "7 revenu\n",
+      "1 right\n",
+      "1 send\n",
+      "1 session\n",
+      "12 share\n",
+      "1 short\n",
+      "1 sinc\n",
+      "6 stock\n",
+      "1 street\n",
+      "5 surpris\n",
+      "1 target\n",
+      "1 tell\n",
+      "3 th\n",
+      "3 time\n",
+      "2 top\n",
+      "3 trade\n",
+      "1 trader\n",
+      "1 us\n",
+      "2 versus\n",
+      "1 volum\n",
+      "1 wall\n",
+      "2 week\n",
+      "1 year\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Look at the vocabulary\n",
+    "vocab = vectorizer.get_feature_names()\n",
+    "\n",
+    "# Look at the counts for each word\n",
+    "dist = np.sum(train_data_features, axis = 0)\n",
+    "for tag, count in zip(vocab, dist):\n",
+    "    print count, tag"
    ]
   },
   {
@@ -599,6 +762,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(processed_article_list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -606,6 +791,14 @@
    "source": [
     "## Ngrams\n",
     "Data is currently treated as unigrams, they may be updated to bigrams later, any larger increases computational costs drastically"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Putting it all together\n",
+    "put all functions together, change list to set for stopwords because search is faster"
    ]
   },
   {
