--- a/clean_articles.ipynb
+++ b/clean_articles.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,8 @@
     "from nltk.stem.lancaster import LancasterStemmer\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -367,10 +368,16 @@
     {
      "data": {
       "text/plain": [
-       "(1, 109)"
+       "array([[ 1,  5,  5,  1,  1,  2,  1,  1,  1,  1,  1,  2,  1,  3,  1,  1,  1,\n",
+       "         1,  8,  1,  2,  1,  6,  1,  1,  2, 16,  2,  1,  1,  6,  4,  2,  3,\n",
+       "         1,  1,  1,  1,  1,  4,  1,  1,  1,  1,  1,  1,  2,  2,  1,  1,  5,\n",
+       "         1,  1,  1,  3,  1,  1,  1,  2,  2,  1,  1,  1,  1,  3,  6,  5,  2,\n",
+       "         4,  1,  1,  9,  1,  2,  1,  8,  3,  1,  1,  2,  1,  1,  1,  4,  1,\n",
+       "         3,  7,  1,  1,  1, 12,  1,  1,  6,  1,  5,  1,  1,  3,  3,  2,  3,\n",
+       "         1,  1,  2,  1,  1,  2,  1]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +394,7 @@
     "\n",
     "# Kaggle method \n",
     "train_data_features = article_vect.toarray()\n",
-    "train_data_features.shape"
+    "train_data_features"
    ]
   },
   {
@@ -401,7 +408,8 @@
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -532,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -541,13 +549,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(u'earn', 16), (u'share', 12), (u'price', 9), (u'consensus', 8), (u'quarter', 8)]\n"
+      "[(u'earn', 16), (u'share', 12), (u'price', 9), (u'consensus', 8), (u'quarter', 8), (u'revenu', 7), (u'stock', 6), (u'day', 6), (u'per', 6), (u'estim', 6)]\n"
      ]
     }
    ],
    "source": [
+    "# just look at 10 most frequent words for this article\n",
     "freqs = [(word, article_vect.getcol(idx).sum()) for word, idx in vectorizer.vocabulary_.items()]\n",
-    "print sorted (freqs, key = lambda x: -x[1])[0:5]"
+    "print sorted (freqs, key = lambda x: -x[1])[0:10]"
    ]
   },
   {
@@ -559,6 +568,15 @@
     "if a word occurs frequently in 1 document, it is important, but if it occurs accross many documents, it is less informative and differentiating\n",
     "\n",
     "Insight tutorial uses NYTimes corpus: https://open.blogs.nytimes.com/2008/10/14/announcing-the-new-york-times-campaign-finance-api/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Putting it all together\n",
+    "1) put all functions together \n",
+    "2) changed list to set for stopwords because search is faster"
    ]
   },
   {
@@ -797,8 +815,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Putting it all together\n",
-    "put all functions together, change list to set for stopwords because search is faster"
+    "# Modeling\n",
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-99-1c872ca05047>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mforest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_estimators\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# fit the forest to the training set, using the bag of words features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mforest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mforest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"sentiment\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "FB_jan25_26 = [131.479996, 132.779999]\n",
+    "\n",
+    "# Try random forest on bag of words\n",
+    "forest = RandomForestClassifier(n_estimators=100)\n",
+    "# fit the forest to the training set, using the bag of words features\n",
+    "forest = forest.fit(train_data_features, FB_jan25_26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  5,  5,  1,  1,  2,  1,  1,  1,  1,  1,  2,  1,  3,  1,  1,  1,\n",
+       "         1,  8,  1,  2,  1,  6,  1,  1,  2, 16,  2,  1,  1,  6,  4,  2,  3,\n",
+       "         1,  1,  1,  1,  1,  4,  1,  1,  1,  1,  1,  1,  2,  2,  1,  1,  5,\n",
+       "         1,  1,  1,  3,  1,  1,  1,  2,  2,  1,  1,  1,  1,  3,  6,  5,  2,\n",
+       "         4,  1,  1,  9,  1,  2,  1,  8,  3,  1,  1,  2,  1,  1,  1,  4,  1,\n",
+       "         3,  7,  1,  1,  1, 12,  1,  1,  6,  1,  5,  1,  1,  3,  3,  2,  3,\n",
+       "         1,  1,  2,  1,  1,  2,  1]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data_features"
    ]
   },
   {
