--- a/bag_of_words_random_forest.ipynb
+++ b/bag_of_words_random_forest.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
        " 'Facebook_Inc_FB_Hires_Former_Google_Exec_to_Lead_Oculus.json']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +194,7 @@
        "2  Facebook Inc (FB) Hires Former Google Exec to ...  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +289,7 @@
        "3"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -342,25 +342,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 ad\n",
+      "2 ad\n",
       "1 adr\n",
       "1 afford\n",
       "1 alphabet\n",
-      "5 analyst\n",
+      "10 analyst\n",
       "2 android\n",
-      "7 announc\n",
+      "12 announc\n",
       "1 answer\n",
-      "1 approach\n",
-      "1 april\n",
+      "2 approach\n",
+      "2 april\n",
       "1 around\n",
       "1 augment\n",
-      "2 averag\n",
-      "1 back\n",
+      "4 averag\n",
+      "2 back\n",
       "1 bad\n",
       "7 barra\n",
-      "1 base\n",
-      "1 beat\n",
-      "1 beaten\n",
+      "2 base\n",
+      "2 beat\n",
+      "2 beaten\n",
       "1 began\n",
       "1 begin\n",
       "1 beij\n",
@@ -369,185 +369,185 @@
       "1 bought\n",
       "1 brendan\n",
       "2 bring\n",
-      "1 call\n",
-      "2 came\n",
-      "1 cap\n",
+      "2 call\n",
+      "4 came\n",
+      "2 cap\n",
       "2 ceo\n",
       "1 ces\n",
-      "3 chang\n",
+      "6 chang\n",
       "1 china\n",
       "1 chines\n",
       "1 claim\n",
-      "1 climb\n",
-      "1 close\n",
-      "3 compani\n",
-      "1 compar\n",
+      "2 climb\n",
+      "2 close\n",
+      "4 compani\n",
+      "2 compar\n",
       "1 compel\n",
       "1 complaint\n",
       "1 comput\n",
-      "8 consensus\n",
+      "16 consensus\n",
       "3 consum\n",
       "1 continu\n",
       "1 control\n",
       "1 copyright\n",
       "1 corp\n",
-      "1 cover\n",
+      "2 cover\n",
       "1 critic\n",
-      "2 data\n",
-      "1 date\n",
-      "6 day\n",
+      "4 data\n",
+      "2 date\n",
+      "12 day\n",
       "1 decemb\n",
-      "1 declar\n",
-      "1 declin\n",
+      "2 declar\n",
+      "2 declin\n",
       "1 detail\n",
       "3 develop\n",
       "1 devic\n",
       "4 divis\n",
-      "2 drop\n",
-      "16 earn\n",
+      "4 drop\n",
+      "32 earn\n",
       "3 effort\n",
       "1 electron\n",
-      "2 end\n",
-      "1 ep\n",
-      "1 equiti\n",
-      "6 estim\n",
+      "4 end\n",
+      "2 ep\n",
+      "2 equiti\n",
+      "12 estim\n",
       "1 excit\n",
-      "4 expect\n",
+      "8 expect\n",
       "1 experienc\n",
-      "6 facebook\n",
+      "8 facebook\n",
       "1 fade\n",
       "1 familiar\n",
-      "6 fb\n",
-      "1 februari\n",
+      "9 fb\n",
+      "2 februari\n",
       "1 feel\n",
-      "1 fell\n",
-      "1 financi\n",
-      "1 firm\n",
-      "1 fiscal\n",
+      "2 fell\n",
+      "2 financi\n",
+      "2 firm\n",
+      "2 fiscal\n",
       "1 fit\n",
-      "4 follow\n",
+      "8 follow\n",
       "2 founder\n",
-      "1 four\n",
-      "1 fourth\n",
-      "2 gain\n",
+      "2 four\n",
+      "2 fourth\n",
+      "3 gain\n",
       "1 game\n",
       "1 gave\n",
       "2 giant\n",
-      "1 given\n",
-      "1 go\n",
+      "2 given\n",
+      "2 go\n",
       "1 googl\n",
       "2 headset\n",
       "2 help\n",
       "1 high\n",
-      "1 higher\n",
+      "2 higher\n",
       "2 hire\n",
-      "2 histori\n",
+      "4 histori\n",
       "7 hugo\n",
       "1 hype\n",
       "1 imag\n",
-      "4 inc\n",
+      "6 inc\n",
       "2 includ\n",
       "2 industri\n",
       "1 innov\n",
       "1 irib\n",
-      "1 januari\n",
+      "2 januari\n",
       "2 join\n",
-      "1 juli\n",
+      "2 juli\n",
       "1 kickstart\n",
       "2 known\n",
-      "9 last\n",
+      "14 last\n",
       "1 lawsuit\n",
       "4 lead\n",
       "1 leav\n",
-      "1 level\n",
+      "2 level\n",
       "1 like\n",
       "1 limitless\n",
       "1 long\n",
       "1 look\n",
-      "1 low\n",
+      "2 low\n",
       "2 luckey\n",
-      "1 made\n",
+      "2 made\n",
       "2 major\n",
       "1 manag\n",
       "1 mark\n",
-      "5 market\n",
+      "8 market\n",
       "1 may\n",
-      "1 met\n",
+      "2 met\n",
       "1 million\n",
-      "3 month\n",
-      "1 move\n",
+      "4 month\n",
+      "2 move\n",
       "1 much\n",
       "1 name\n",
-      "5 nasdaq\n",
-      "2 near\n",
+      "7 nasdaq\n",
+      "4 near\n",
       "2 new\n",
       "1 news\n",
-      "2 next\n",
+      "3 next\n",
       "1 night\n",
-      "1 novemb\n",
+      "2 novemb\n",
       "1 nyse\n",
-      "1 occas\n",
+      "2 occas\n",
       "9 oculus\n",
-      "1 offici\n",
+      "2 offici\n",
       "1 oper\n",
       "1 order\n",
       "1 palmer\n",
       "1 part\n",
       "1 particular\n",
-      "4 past\n",
+      "7 past\n",
       "1 peopl\n",
-      "6 per\n",
-      "5 percent\n",
-      "2 period\n",
+      "12 per\n",
+      "10 percent\n",
+      "4 period\n",
       "1 platform\n",
       "1 playstat\n",
       "1 polish\n",
       "1 polit\n",
-      "4 posit\n",
-      "1 post\n",
-      "1 present\n",
+      "8 posit\n",
+      "2 post\n",
+      "2 present\n",
       "1 presid\n",
       "1 press\n",
-      "10 price\n",
+      "19 price\n",
       "1 prior\n",
-      "1 probabl\n",
+      "2 probabl\n",
       "2 product\n",
-      "2 project\n",
+      "4 project\n",
       "1 promot\n",
       "1 prospect\n",
-      "1 public\n",
+      "2 public\n",
       "2 push\n",
-      "8 quarter\n",
-      "3 rang\n",
-      "1 reaction\n",
+      "16 quarter\n",
+      "6 rang\n",
+      "2 reaction\n",
       "1 readi\n",
       "5 realiti\n",
-      "1 rebound\n",
-      "2 recent\n",
-      "1 record\n",
-      "1 releas\n",
-      "1 relev\n",
-      "4 report\n",
-      "1 respond\n",
-      "3 result\n",
+      "2 rebound\n",
+      "4 recent\n",
+      "2 record\n",
+      "2 releas\n",
+      "2 relev\n",
+      "8 report\n",
+      "2 respond\n",
+      "6 result\n",
       "1 return\n",
       "1 reveal\n",
-      "7 revenu\n",
+      "14 revenu\n",
       "2 rift\n",
-      "2 right\n",
+      "3 right\n",
       "1 root\n",
       "1 rough\n",
       "1 said\n",
       "1 secret\n",
       "2 seem\n",
-      "1 send\n",
+      "2 send\n",
       "1 serv\n",
-      "1 session\n",
-      "13 share\n",
-      "2 short\n",
+      "2 session\n",
+      "25 share\n",
+      "3 short\n",
       "1 show\n",
       "1 silicon\n",
-      "1 sinc\n",
+      "2 sinc\n",
       "2 six\n",
       "1 skill\n",
       "1 someon\n",
@@ -555,50 +555,50 @@
       "1 sound\n",
       "1 start\n",
       "1 step\n",
-      "6 stock\n",
+      "12 stock\n",
       "1 stole\n",
-      "1 street\n",
+      "2 street\n",
       "1 struggl\n",
-      "5 surpris\n",
+      "10 surpris\n",
       "1 system\n",
-      "1 target\n",
+      "2 target\n",
       "1 team\n",
       "3 technolog\n",
-      "1 tell\n",
-      "3 th\n",
+      "2 tell\n",
+      "6 th\n",
       "1 thing\n",
       "1 though\n",
       "1 tie\n",
-      "5 time\n",
+      "8 time\n",
       "1 togeth\n",
       "1 took\n",
-      "3 top\n",
+      "5 top\n",
       "1 touch\n",
       "1 traction\n",
-      "4 trade\n",
-      "1 trader\n",
+      "7 trade\n",
+      "2 trader\n",
       "1 turn\n",
       "1 understand\n",
       "1 unexpect\n",
-      "1 us\n",
+      "2 us\n",
       "1 valley\n",
-      "2 versus\n",
+      "4 versus\n",
       "1 veteran\n",
       "1 vice\n",
       "1 view\n",
       "1 violat\n",
       "5 virtual\n",
-      "1 volum\n",
+      "2 volum\n",
       "6 vr\n",
-      "1 wall\n",
+      "2 wall\n",
       "1 want\n",
-      "3 week\n",
+      "5 week\n",
       "2 well\n",
       "1 western\n",
       "1 work\n",
       "1 wrote\n",
       "3 xiaomi\n",
-      "2 year\n",
+      "3 year\n",
       "2 zuckerberg\n"
      ]
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -651,13 +651,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "FB_jan25_26 = np.asarray([131.48, 132.78], dtype=\"|S6\")\n",
+    "FB_jan25_26 = np.asarray([131.48, 132.78, 133], dtype=\"|S6\")\n",
     "\n",
     "# Try random forest on bag of words\n",
     "forest = RandomForestClassifier(n_estimators=100)\n",
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1201,7 +1201,7 @@
        "[122 rows x 3 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1237,6 +1237,9 @@
     }
    ],
    "source": [
+    "# create dictionary for each company. Each entry is a combined, cleaned\n",
+    "# string of all articles\n",
+    "\n",
     "days = set(company_articles_combined_days.category)\n",
     "\n",
     "tokenized_daily_articles = dict()\n",
@@ -1248,7 +1251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'Apple Inc 1-27-17',\n",
+       " u'Apple Inc',\n",
+       " u'Apple Inc 1-26-17',\n",
+       " u'Apple Inc 1-30-17']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenized_daily_articles.keys()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -1256,15 +1284,34 @@
    "source": [
     "# Do this for every key in the dictionary\n",
     "# can do feature(token) reduction later for too rare and too common words\n",
+    "# reshape df for word2vec\n",
     "\n",
     "vectorizer = CountVectorizer()\n",
     "\n",
     "# perform count-based vectorization\n",
-    "article_vect = vectorizer.fit_transform(tokenized_daily_articles)\n",
+    "article_vect = vectorizer.fit_transform(tokenized_daily_articles['Apple Inc'])\n",
     "\n",
     "# Kaggle method \n",
     "train_data_features = article_vect.toarray()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
