added preprocessing function for word2vec which makes stopwords optional

--- a/bag_of_words_random_forest.ipynb
+++ b/bag_of_words_random_forest.ipynb
@@ -1302,7 +1302,46 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def preprocess_article_content_word2vec(text_df, remove_stopwords = False):\n",
+    "    \"\"\"\n",
+    "    Simple preprocessing pipeline which uses RegExp, sets basic token requirements, and removes stop words.\n",
+    "    Set up to work with df files created from JSONs\n",
+    "    \"\"\"\n",
+    "    print 'preprocessing article text...'\n",
+    "\n",
+    "    # tokenizer, stops, and stemmer\n",
+    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "    stemmer = SnowballStemmer('english')\n",
+    "    \n",
+    "    if remove_stopwords:\n",
+    "        stop_words = set(stopwords.words('english'))  # can add more stop words to this set\n",
+    "    else:\n",
+    "        stop_words = set()\n",
+    "        \n",
+    "    # process articles\n",
+    "    article_list = []\n",
+    "    for row, article in enumerate(text_df['body']):\n",
+    "        cleaned_tokens = []\n",
+    "\n",
+    "        letters_only = re.sub(\"[^a-zA-Z]\", \" \", article)\n",
+    "        lower_case = letters_only.lower()\n",
+    "        tokens = tokenizer.tokenize(lower_case)\n",
+    "\n",
+    "    #         tokens = tokenizer.tokenize(article.decode('utf-8').lower())\n",
+    "        for token in tokens:\n",
+    "            if token not in stop_words:\n",
+    "                if len(token) > 0 and len(token) < 20: # removes non words\n",
+    "                    if not token[0].isdigit() and not token[-1].isdigit(): # removes numbers\n",
+    "                        stemmed_tokens = stemmer.stem(token)\n",
+    "                        cleaned_tokens.append(stemmed_tokens)\n",
+    "        # add process article\n",
+    "        article_list.append(' '.join(wd for wd in cleaned_tokens))\n",
+    "\n",
+    "    # echo results and return\n",
+    "    print 'preprocessed content for %d articles' % len(article_list)\n",
+    "    return article_list"
+   ]
   },
   {
    "cell_type": "code",
