am: cleaned notebook

--- a/notebooks/Walkthrough_nlp_training.ipynb
+++ b/notebooks/Walkthrough_nlp_training.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "I use the extracted features (plus the same day's closing S&P500) to try and fit various regression models to predict the next day's S&P500 and compare them to the flat model, i.e. predicting the same for tomorrow as today. Unfortunately there is no clear benefit so far.\n",
     "\n",
-    "I also try to predict if tomorrow's index value will rise or fall, given today's news. This approach does perform a little better than the benchmark model."
+    "I also try to predict if tomorrow's index value will rise or fall, given today's news. This approach seems more promising but as of now a successful example of this is not yet included in this notebook."
    ]
   },
   {
@@ -39,23 +39,7 @@
     "sourcedir=os.path.split(os.getcwd())[0]+\"/source\"\n",
     "if sourcedir not in sys.path:\n",
     "    sys.path.append(sourcedir)\n",
-    "import numpy as np\n",
-    "#import os.path\n",
-    "#import datetime\n",
-    "#from dateutil.rrule import rrule, DAILY\n",
-    "#import csv\n",
-    "#import random\n",
-    "#import pandas as pd\n",
-    "#import nltk\n",
-    "#import re\n",
-    "#import numpy as np\n",
-    "#from nltk.stem.porter import PorterStemmer\n",
-    "#from urllib.parse import urlparse\n",
-    "#from nltk.tokenize import RegexpTokenizer\n",
-    "#from nltk.corpus import stopwords\n",
-    "#from sklearn.feature_extraction.text import CountVectorizer\n",
-    "#from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "#from sklearn.preprocessing import scale"
+    "import numpy as np"
    ]
   },
   {
@@ -299,7 +283,7 @@
    },
    "outputs": [],
    "source": [
-    "del datagdelt\n",
+    "#del datagdelt\n",
     "datagdelt=nlpp.CorpusGDELT(min_ment=400) # min_ment defaults to 1 and cuts off events that have a \n",
     "#low number of mentions"
    ]
@@ -387,28 +371,6 @@
    ],
    "source": [
     "print(datagdelt.header,end=' ') #GDELT csv files header, notice the last field has the urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Actor1KnownGroupCode'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datagdelt.header[8]"
    ]
   },
   {
@@ -1270,7 +1232,7 @@
    },
    "source": [
     "## The model training module (work in progress, please be patient)\n",
-    "This section is going to cover model training, validation, and testing, from our model_training module"
+    "This section covers model training, validation, and testing, from our model_training module"
    ]
   },
   {
